# WorldMaster

./: .gitignore  .justfile  Cargo.toml  LICENSE  Makefile  README.md  justfile  manage.py  package.json  pyproject.toml  requirements.txt  rollup.config.mts  tsconfig.json
containers/: development.Containerfile  django-init.sh  dumpdata.sh  runserver.sh  tsc.sh
containers/kube/: dev.yml  django.yml  postgres.yml  watchtsc.yml
fixtures/: worlds.json
oci/: development.Containerfile  django.sh  dumpdata.sh  tsc.sh
python/test/worldmaster/: test_maps.py
python/worldmaster/: __init__.py  shape.pyi
python/worldmaster/maps/: models.py
python/worldmaster/roles/: __init__.py  apps.py  models.py
python/worldmaster/roles/migrations/: 0002_initial.py
python/worldmaster/wiki/: __init__.py  apps.py  models.py
python/worldmaster/worldmaster/: apps.py  signals.py  validators.py
python/worldmaster/worldmaster/migrations/: 0001_initial.py
python/worldmaster/worldmaster/settings/: __init__.py  _util.py  development.py  production.py
python/worldmaster/worldmaster/templates/: macros.sql
python/worldmaster/worlds/: signals.py
src/: lib.rs  shape.rs
src/roles/: apps.py  models.py  signals.py
src/roles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_role_target_alter_role_user_and_more.py  0004_roletarget_users_role_unique_role_target_user_type.py  0005_alter_role_target_alter_role_user.py  0006_create_resolvedrole.py  0007_change_resolvedrole.py
src/wiki/: apps.py  forms.py  models.py  signals.py  views.py
src/wiki/migrations/: 0001_initial.py  0002_alter_section_article.py  0002_section_wiki_sectio_article_719adc_idx.py  0003_alter_section_order.py
src/wiki/static/wiki/: wiki.ts
src/wiki/templatetags/: markdown.py
src/worldmaster/: __init__.py  apps.py  models.py  urls.py
src/worldmaster/jinja/: __init__.py  app_loader.py  apps.py  database_bytecode_cache.py  environment.py  importlib_loader.py  models.py  sql.py
src/worldmaster/maps/: apps.py  fields.py  functions.py  models.py
src/worldmaster/migrations/: 0001_initial.py
src/worldmaster/roles/: apps.py  models.py  signals.py
src/worldmaster/settings/: __init__.py  development.py
src/worldmaster/wiki/: apps.py  models.py  signals.py
src/worldmaster/worldmaster/: __init__.py  apps.py  asgi.py  models.py  signals.py  urls.py  validators.py  wsgi.py
src/worldmaster/worlds/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py
src/worlds/: apps.py  forms.py  models.py  signals.py  urls.py  validators.py
src/worlds/migrations/: 0001_initial.py  0002_player_world_players_player_unique_player_world_user.py  0002_world_master.py  0003_alter_entity_article_alter_event_article_and_more.py
src/worlds/templatetags/: worlds.py
src/worlds/views/: __init__.py  plane.py  world.py
test/: test_maps.py  test_roles.py
ts/: main.mts
ts/wiki/: SectionEditor.mts  WikiEditor.mts  display-wiki.mts  edit-wiki.mts  edit-wiki.ts  wiki.ts
ts/worlds/: edit-players.ts
wiki/: forms.py  models.py  signals.py  urls.py
wiki/migrations/: 0001_initial.py
wiki/templates/wiki/: article_detail.html  article_form.html  article_list.html  edit_list.html
worldmaster/: asgi.py  settings.py  urls.py  wsgi.py
worldmaster/migrations/: 0001_initial.py
worldmaster/settings/: __init__.py  development.py
worlds/: forms.py  models.py  urls.py  validators.py  views.py
worlds/migrations/: 0001_initial.py  0002_alter_entity_article_alter_event_article_and_more.py  0002_alter_world_description_alter_world_name_and_more.py  0003_plane_plane_unique_world_slug.py  0004_remove_plane_unique_world_slug_and_more.py  0005_rename_created_plane_created_at_and_more.py
worlds/views/: plane.py  world.py
(+64 files in other folders)
