[package]
name = "worldmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_worldmaster_rust"
crate-type = ["cdylib"]

[dependencies]
postcard = { version = "1.0.8", features = ["use-std"] }
pyo3 = "0.19.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
