[project]
name = 'worldmaster'
dynamic = ["version"]
description = 'The WorldMaster tabletop RPG Wiki and game manager'
readme = 'README.md'
requires-python = '>= 3.12'
license = { text = 'AGPL-3.0-or-later' }
keywords = ['rpg', 'games', 'wiki']
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Topic :: Games/Entertainment :: Role-Playing',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Rust',
  'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
]

dependencies = [
  'Django[argon2] >= 4.2.0, < 4.3',
  'django-stubs >= 4.2.6, < 5',
  'ptpython >= 3.0.22',
  'Werkzeug >= 2.2.2, < 3.0.0',
  'Jinja2 >= 3.1.2, < 4.0.0',
  'django-extensions',
  'psycopg[c] >= 3.1.12, < 4',
]

[project.optional-dependencies]
dev = [
  'ruff',
]


[project.urls]
repository = 'https://codeberg.org/WorldMaster/WorldMaster'

[[project.authors]]
email = 'taywee@gmx.com'
name = 'Taylor C. Richberger'

[[project.authors]]
email = 'btp@brandont.dev'
name = 'Brandon Phillips'

[[project.maintainers]]
email = 'taywee@gmx.com'
name = 'Taylor C. Richberger'

[[project.maintainers]]
email = 'btp@brandont.dev'
name = 'Brandon Phillips'

[build-system]
requires = ['maturin>=1.3,<2.0']
build-backend = 'maturin'

[tool.maturin]
python-source = "python"
module-name = "worldmaster._worldmaster_rust"
features = ["pyo3/extension-module"]

[tool.ruff]
select = [
  'B',
  'C4',
  'COM',
  'D',
  'E',
  'EM',
  'EXE',
  'F',
  'FA',
  'FLY',
  'G',
  'I',
  'ISC',
  'PERF',
  'PIE',
  'PL',
  'PTH',
  'Q',
  'RET',
  'RSE',
  'RUF',
  'SIM',
  'TCH',
  'TD',
  'TID',
  'TRY',
  'UP',
  'W',
]

ignore = [
  'RUF012',
  'D203',
  'D213',
  'D104',
  'D100',
  'D101',
  'D106',
  'D105',
  'D102',
]

line-length = 128

[tool.ruff.per-file-ignores]
'**/migrations/*.py' = ['ALL']
